# scrDbg

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
app/: CMakeLists.txt
app/src/: Common.cpp  Common.hpp  Main.cpp  Pointers.cpp
app/src/core/: PipeClient.cpp  Pointer.hpp  Process.cpp  Process.hpp  Scanner.hpp
app/src/game/gta/: TextLabels.hpp
app/src/game/rage/: scrProgram.cpp
app/src/gui/: Breakpoints.cpp  Breakpoints.hpp  Disassembly.cpp  FunctionList.cpp  GUI.cpp  Logs.cpp  Logs.hpp  Results.cpp  ScriptExport.cpp  ScriptGlobals.hpp  ScriptStatics.cpp  ScriptThreads.cpp  ScriptThreads.hpp  Stack.hpp
app/src/pipe/: PipeCommands.cpp  PipeCommands.hpp
app/src/resource/: scrDbg.rc
app/src/script/: ScriptDisassembler.hpp
app/src/util/: GUIHelpers.cpp  GUIHelpers.hpp  Misc.hpp
src/lib/: CMakeLists.txt  Common.cpp  Common.hpp  Hooking.cpp  Hooking.hpp  Main.cpp  Pointers.cpp  Pointers.hpp
src/lib/core/: Hooking.cpp  Hooking.hpp  Memory.hpp  PipeCommands.hpp  PipeServer.cpp  PipeServer.hpp  Scanner.cpp  Scanner.hpp
src/lib/debug/: ScriptBreakpoint.cpp  ScriptBreakpoint.hpp  ScriptFunctionNames.cpp  ScriptFunctionNames.hpp  ScriptLogger.cpp  ScriptLogger.hpp  ScriptVariableWriteTracker.cpp  ScriptVariableWriteTracker.hpp
src/lib/debugger/: Debugger.cpp  Debugger.hpp  DebuggerGTA4.cpp  DebuggerGTA4.hpp  DebuggerGTA5.cpp  DebuggerGTA5.hpp  DebuggerPayne.cpp  DebuggerPayne.hpp  DebuggerRDR2.cpp  DebuggerRDR2.hpp  DebuggerRDR3.cpp  DebuggerRDR3.hpp  VMLogger.cpp  VMLogger.hpp
src/lib/game/: GTA4.cpp  GTA4.hpp  GTA5.cpp  GTA5.hpp  Game.cpp  Game.hpp  Payne.cpp  Payne.hpp  RDR2.cpp  RDR2.hpp  RDR3.cpp  RDR3.hpp
src/lib/rage/: Vector3.hpp  atArray.hpp  scrNativeCallContext.hpp  scrOpcode.hpp  scrProgram.hpp  scrString.hpp  scrThread.cpp  scrThreadContext.hpp  scrValue.hpp
src/lib/rage/enhanced/: scrThread.cpp  scrThread.hpp  scrThreadContext.hpp
src/lib/rage/gta4/: scrOpcode.hpp  scrProgram.cpp  scrProgram.hpp  scrThread.cpp  scrThread.hpp
src/lib/rage/gta5/: scrNativeRegistration.hpp  scrOpcode.hpp  scrProgram.cpp  scrProgram.hpp  scrThread.cpp  scrThread.hpp
src/lib/rage/legacy/: scrThread.cpp  scrThread.hpp  scrThreadContext.hpp  tlsContext.hpp
src/lib/rage/payne/: scrCommand.hpp  scrOpcode.hpp  scrProgram.cpp  scrProgram.hpp  scrThread.cpp  scrThread.hpp
src/lib/rage/rdr2/: scrOpcode.hpp  scrProgram.cpp  scrProgram.hpp  scrThread.cpp  scrThread.hpp
src/lib/rage/rdr3/: scrNativeRegistration.hpp  scrOpcode.hpp  scrProgram.cpp  scrProgram.hpp  scrThread.cpp  scrThread.hpp
src/lib/rage/shared/: atArray.hpp  atMap.hpp  pgBase.hpp  scrHash.hpp  scrNativeCallContext.hpp  scrNativeContext.hpp  scrNativeRegistration.cpp  (+6 more)
src/lib/x64/: CMakeLists.txt  Main.cpp  Pointers.hpp
src/lib/x86/: CMakeLists.txt  Common.hpp  Logger.hpp  Main.cpp
(+268 files in other folders)
